tests/ctu/pass/data/newtype.ct
type I = int;

def takeAlias(x: I): int = x as int;

@entry
def main {
    takeAlias(I::new(1));
}
