tests/ctu/fail/data/newtype.ct
type I = int;

def takeAlias(x: I): int = x as int;

@entry
def main {
    takeAlias(1);
}
